force-app/main/default/objects/AdminTool_BulkFieldScanJob__c/AdminTool_BulkFieldScanJob__c.object-meta.xml
<CustomObject>
    <description>Parent job for bulk dependency scans across 0% populated fields.</description>
    <label>Admin Tool Bulk Field Scan Job</label>
    <nameField>
        <displayFormat>BFS-{000000}</displayFormat>
        <label>Bulk Scan Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Tool Bulk Field Scan Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>