force-app/main/default/objects/AdminTool_BulkFieldScanJob__c/fields/CleanupCandidateCount__c.field-meta.xml
<CustomField>
    <fullName>CleanupCandidateCount__c</fullName>
    <label>Cleanup Candidate Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>