force-app/main/default/objects/AdminTool_BulkFieldScanJob__c/fields/CompletedFields__c.field-meta.xml
<CustomField>
    <fullName>CompletedFields__c</fullName>
    <label>Completed Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>