force-app/main/default/objects/AdminTool_BulkFieldScanJob__c/fields/FailedFields__c.field-meta.xml
<CustomField>
    <fullName>FailedFields__c</fullName>
    <label>Failed Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>