force-app/main/default/objects/AdminTool_BulkFieldScanJob__c/fields/PartialFields__c.field-meta.xml
<CustomField>
    <fullName>PartialFields__c</fullName>
    <label>Partial Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>