force-app/main/default/objects/AdminTool_BulkFieldScanJob__c/fields/TotalFields__c.field-meta.xml
<CustomField>
    <fullName>TotalFields__c</fullName>
    <label>Total Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>